@@ -18,13 +18,13 @@ typedef chunk_reference_t boolexp;
 enum { TRUE_BOOLEXP = NULL_CHUNK_REFERENCE };
 
 /* From boolexp.c */
-extern boolexp dup_bool(boolexp b);
-extern int sizeof_boolexp(boolexp b);
-extern int eval_boolexp(dbref player, boolexp b, dbref target);
-extern boolexp parse_boolexp(dbref player, const char *buf, lock_type ltype);
-extern boolexp parse_boolexp_d(dbref player, const char *buf, lock_type ltype,
+boolexp dup_bool(boolexp b);
+int sizeof_boolexp(boolexp b);
+int eval_boolexp(dbref player, boolexp b, dbref target);
+boolexp parse_boolexp(dbref player, const char *buf, lock_type ltype);
+boolexp parse_boolexp_d(dbref player, const char *buf, lock_type ltype,
                                int derefs);
-extern void free_boolexp(boolexp b);
+void free_boolexp(boolexp b);
 boolexp getboolexp(PENNFILE *f, const char *ltype);
 void putboolexp(PENNFILE *f, boolexp b);
 enum u_b_f {
@@ -33,5 +33,6 @@ enum u_b_f {
   UB_MEREF /**< Use dbrefs or "me" if the object is the player arg
               from unparse_boolexp.() For @decompile. */
 };
-extern char *unparse_boolexp(dbref player, boolexp b, enum u_b_f flag);
+char *unparse_boolexp(dbref player, boolexp b, enum u_b_f flag);
+boolexp cleanup_boolexp(boolexp);
 #endif                          /* BOOLEXP_H */
